# ClassificationAssistant

./: .gitignore  CMakeLists.txt  classificationworker.cpp  classificationworker.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  stylesheet.h
